unpackaged/main/default/objects/Attached_Document__c/Attached_Document__c.object-meta.xml
<CustomObject>
    <label>Attached Document</label>
    <nameField>
        <label>Attached Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attached Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>