unpackaged/main/default/objects/Attached_Document__c/fields/Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Link__c</fullName>
    <label>Document Link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>