unpackaged/main/default/objects/Attached_Document__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Used in order to assign the booklets to the right products</description>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>