unpackaged/main/default/objects/Attached_Document__c/fields/StructureLevel1__c.field-meta.xml
<CustomField>
    <fullName>StructureLevel1__c</fullName>
    <description>Used to link the Documents with the right Products</description>
    <label>StructureLevel1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StructureLevel1</valueSetName>
    </valueSet>
</CustomField>