unpackaged/main/default/objects/Attached_Document__c/fields/StructureLevel2__c.field-meta.xml
<CustomField>
    <fullName>StructureLevel2__c</fullName>
    <description>Used to link the Documents with the right Products</description>
    <label>StructureLevel2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StructureLevel1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>StructureLevel2</valueSetName>
    </valueSet>
</CustomField>