unpackaged/main/default/objects/Attached_Document__c/recordTypes/Conditions_Generales_de_Vente.recordType-meta.xml
<RecordType>
    <fullName>Conditions_Generales_de_Vente</fullName>
    <active>false</active>
    <label>Conditions Générales de Vente</label>
</RecordType>