unpackaged/main/default/objects/Attached_Document__c/recordTypes/General_Terms_And_Conditions.recordType-meta.xml
<RecordType>
    <fullName>General_Terms_And_Conditions</fullName>
    <active>true</active>
    <label>General Terms and Conditions</label>
</RecordType>