unpackaged/main/default/objects/Attached_Document__c/recordTypes/Livret_de_Service.recordType-meta.xml
<RecordType>
    <fullName>Livret_de_Service</fullName>
    <active>false</active>
    <label>Livret de Service</label>
</RecordType>