unpackaged/main/default/objects/Attached_Document__c/recordTypes/Service_Book.recordType-meta.xml
<RecordType>
    <fullName>Service_Book</fullName>
    <active>true</active>
    <label>Service Book</label>
</RecordType>