unpackaged/main/default/objects/Attached_Document__c/recordTypes/Technical_Prerequisite.recordType-meta.xml
<RecordType>
    <fullName>Technical_Prerequisite</fullName>
    <active>true</active>
    <label>Technical Prerequisite</label>
</RecordType>