unpackaged/main/default/objects/Attached_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Document_Link__c</columns>
    <columns>StructureLevel1__c</columns>
    <columns>StructureLevel2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>